Fix z-index for #cosmos-actionsList-list

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -54,7 +54,6 @@ body a, body a:hover, body a:focus {
 	min-width: 160px;
 	overflow: auto;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
 	margin: 0;
 	a {
 		color: black;
